# discordbotg

./: .env.sample  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
src/: __init__.py  config.py  main.py  voicebox.py  ytdl_wrapper.py
src/umigame/: README.md  umigame.py  umigame_test.py
src/yomiage/: README.md  __init__.py  voice.json  voicebox.py  yomiage.py
